# lucid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bandit.yaml  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  turbo.json  vulture_whitelist.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  EEG_SR_CORRELATION.md  GETTING_STARTED.md  HARDWARE_GUIDE.md  NEUROFEEDBACK_GUIDE.md  SAFETY.md
dsp/: Cargo.toml
dsp/python/: Cargo.toml  pyproject.toml
dsp/python/src/: lib.rs
dsp/src/: asr.rs  csp.rs  features.rs  fft.rs  filters.rs  lib.rs
dsp/wasm/: Cargo.toml
dsp/wasm/src/: lib.rs
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  ads1299.c  ads1299.h  config.h  main.c  streaming.c  streaming.h
hardware/: DESIGN_NOTES.md  bom.yaml
protocols/: README.md  alpha_theta.yaml  beta_training.yaml  smr_training.yaml  sr_entrainment.yaml
research/: BCI_ALGORITHMS_RESEARCH.md  BCI_EEG_LANDSCAPE.md  BCI_ENGINEERING_RESEARCH.md  BCI_PROTOCOLS_INTEGRATION.md  DASHBOARD_DESIGN_RESEARCH.md  LUCID_BCI_RESEARCH.md
scripts/: simulate_device.py
sdk/python/: pyproject.toml
sdk/python/lucid/: __init__.py  artifacts.py  brainflow_bridge.py  device.py  edf_export.py  features.py  lsl_inlet.py  neurosky.py  processing.py
sdk/python/tests/: test_artifacts.py  test_brainflow.py  test_device.py  test_edf_export.py  test_features.py  test_lsl_sdk.py  test_neurosky.py  test_processing.py
server/: Dockerfile  pyproject.toml
server/lucid_server/: __init__.py  config.py  main.py
server/lucid_server/dsp/: __init__.py
server/lucid_server/models/: __init__.py  ws_messages.py
server/lucid_server/routes/: __init__.py  data.py  health.py  lsl.py  protocols.py  sessions.py
server/lucid_server/services/: __init__.py  classifier.py  earthsync_client.py  eeg_processor.py  lsl_inlet.py  neurofeedback.py
server/tests/: __init__.py  test_artifact_rejector.py  test_classifier.py  test_config.py  test_data.py  test_earthsync_client.py  test_eeg_processor.py  test_health.py  test_integration.py  test_lsl_inlet.py  test_lsl_route.py  test_main.py  test_main_security.py  test_neurofeedback.py  test_protocols_route.py  test_sessions.py
simulator/: Dockerfile  requirements.txt  simulate.py
web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: BandPower.tsx  DeviceConnect.tsx  EEGTrace.tsx  NeurofeedbackPanel.tsx  SessionManager.tsx  Spectrogram.tsx  TopoMap.tsx
web/src/components/ui/: Button.tsx  EmptyState.tsx  Panel.tsx  Select.tsx  StatusChip.tsx
web/src/hooks/: useEEGStream.ts
web/src/lib/: canvas.ts  colormap.ts  constants.ts  dsp.ts  theme-colors.ts  trace-sim.ts  types.ts
web/tests/: App.test.tsx  components.test.tsx  dsp.test.ts  hooks.test.ts  lib.test.ts  setup.ts  types.test.ts  ui.test.tsx
