[project]
name = "lucid-server"
version = "0.1.2"
description = "Lucid BCI server — real-time EEG processing and neurofeedback"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "websockets>=14.0",
    "numpy>=2.1",
    "scipy>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "onnxruntime>=1.20",
    "sqlmodel>=0.0.22",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.15",
    "pyright>=1.1",
    "bandit>=1.8",
    "vulture>=2.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (e.g., EarthSync)",
]
