[project]
name = "lucid-server"
version = "0.2.1"
description = "Lucid BCI server — real-time EEG processing and neurofeedback"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "websockets>=14.0",
    "numpy>=2.4",
    "scipy>=1.17",
    "pydantic>=2.10",
    "pydantic-settings>=2.13",
    "onnxruntime>=1.20",
    "sqlmodel>=0.0.22",
    "httpx>=0.28",
    "structlog>=25.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1",
    "httpx>=0.28",
    "ruff>=0.15",
    "pyright>=1.1",
    "bandit>=1.8",
    "vulture>=2.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (e.g., EarthSync)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lucid_server"]
