[project]
name = "lucid-sdk"
version = "0.2.1"
description = "Python SDK for Lucid BCI devices"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lucid"]
